<resources>
    <string name="app_name">RssReader</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="profile">Profile</string>
    <string name="achievements">Achievements</string>
    <string name="settings">Settings</string>
    <string name="contact">Contact</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="create_account">Create account</string>
    <string name="no_account">No account yet ? Create one now !</string>
    <string name="already_member">Already a member ? Login now !</string>
    <string name="nav_open">Nav open</string>
    <string name="nav_close">Nav close</string>
    <!--    Content Description    -->
    <string name="CD_logo">Logo MoneyBack</string>
    <string name="CD_ic_username">Icon for username</string>
    <string name="CD_ic_email">Icon for email</string>
    <string name="CD_ic_password">Icon for password</string>
    <string name="CD_ic_visibility">Icon to show password or not</string>

    <!--    Notification Messages   -->
    <string name="notify_login">Login Success</string>
</resources>
