<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#552196F3"
        android:fitsSystemWindows="true"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="24dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/mainLayout"
                android:layout_alignParentTop="true"
                android:id="@+id/headerLayout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_horizontal">

                    <!-- stuff to scroll -->


                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mainLayout"
                android:orientation="vertical"
                android:layout_centerVertical="true">

                <!-- username Label -->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:padding="12dp">
                    <ImageView
                        android:src="@drawable/ic_email_grey"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="12dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/CD_ic_email" />
                    <EditText android:id="@+id/input_email_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email"
                        android:textColorHint="#a4a3a3"
                        android:textCursorDrawable="@drawable/cursor_login" />

                </LinearLayout>

                <!-- Password Label -->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:padding="12dp">
                    <ImageView
                        android:src="@drawable/ic_lock_grey"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="12dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/CD_ic_password" />
                    <EditText android:id="@+id/input_password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@android:color/transparent"
                        android:inputType="textPassword"
                        android:hint="@string/password"
                        android:textColorHint="#a4a3a3"
                        android:textCursorDrawable="@drawable/cursor_login"/>
                    <ImageView
                        android:id="@+id/visibility_password"
                        android:src="@drawable/ic_visibility_off_grey"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="12dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/CD_ic_visibility" />
                </LinearLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorWhite"
                    android:text="@string/sign_in"/>

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/mainLayout"
                android:id="@+id/footerLayout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView android:id="@+id/link_signup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_account"
                            android:layout_centerHorizontal="true"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp"/>

                    </RelativeLayout>

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>